--- a/src/app/shared/profile-page/profile-page.component.html
+++ b/src/app/shared/profile-page/profile-page.component.html
@@ -1,40 +1,55 @@
-<app-profile></app-profile>
+<div class="background">
+  <app-profile></app-profile>
 
-<div class="container-fluid background">
-  <app-profile-sidebar></app-profile-sidebar>
+  <div class="container-fluid background">
+    <app-profile-sidebar></app-profile-sidebar>
 
-  <h2>Update IdP URL</h2>
-  <form [formGroup]="form" class="form center-vertical text-left" (submit)="saveIdpUrls();">
+    <h2>Update IdP URL</h2>
+    <form [formGroup]="form" class="form center-vertical text-left" (submit)="saveIdpUrls();">
 
-    <div class="form-group" style="width: 100%; display: inline-block;">
-      <label>Google IdP URL<span class="danger-text">*</span></label>
-      <input formControlName="idpUrl" type="text" class="form-control" placeholder="Idp Url *" [value]="idpUrlValue" >
-      <small class="text-error" *ngIf="(form.controls['idpUrl'].dirty || form.controls['idpUrl'].touched) && form.controls['idpUrl'].errors">Insert the Google IdP URL</small>
-    </div>
+      <div class="form-group" style="width: 100%; display: inline-block;">
+        <label>Google IdP URL<span class="danger-text">*</span></label>
+        <input formControlName="idpUrl" type="text" class="form-control" placeholder="Idp Url *" [value]="idpUrlValue" >
+        <small class="text-error" *ngIf="(form.controls['idpUrl'].dirty || form.controls['idpUrl'].touched) && form.controls['idpUrl'].errors">Insert the Google IdP URL</small>
+      </div>
 
-    <h2>Proxy settings</h2>
-    <div class="form-group" style="width: 16%; display: inline-block;">
-      <label>Protocol</label>
-      <select formControlName="proxyProtocol" class="form-control" [value]="proxyProtocol">
-        <option value="http">HTTP</option>
-        <option value="https">HTTPS</option>
-      </select>
-    </div>
-    <div class="form-group" style="width: 4%; display: inline-block;">://</div>
-    <div class="form-group" style="width: 56%; display: inline-block;">
-      <label>Proxy URL</label>
-      <input formControlName="proxyUrl" type="text" class="form-control" placeholder="Proxy Url" [value]="proxyUrl" >
-    </div>
-    <div class="form-group" style="width: 4%; display: inline-block;">:</div>
-    <div class="form-group" style="width: 20%; display: inline-block;">
-      <label>Proxy Port</label>
-      <input formControlName="proxyPort" type="text" class="form-control" placeholder="Proxy Url" [value]="proxyPort" >
-    </div>
 
-    <br><br><br><br><br><br>
+      <h2>Proxy settings</h2>
+      <div class="form-group" style="width: 16%; display: inline-block;">
+        <label>Protocol</label>
+        <select formControlName="proxyProtocol" class="form-control" [value]="proxyProtocol">
+          <option value="http">HTTP</option>
+          <option value="https">HTTPS</option>
+        </select>
+      </div>
+      <div class="form-group" style="width: 6%; display: inline-block; padding-top: 35px; padding-left: 3px;">://</div>
+      <div class="form-group" style="width: 56%; display: inline-block;">
+        <label>Proxy URL</label>
+        <input formControlName="proxyUrl" type="text" class="form-control" placeholder="Proxy Url" [value]="proxyUrl" >
+      </div>
+      <div class="form-group" style="width: 6%; display: inline-block; padding-top: 35px; padding-left: 3px;">:</div>
+      <div class="form-group" style="width: 16%; display: inline-block;">
+        <label>Proxy Port</label>
+        <input formControlName="proxyPort" type="text" class="form-control" placeholder="Proxy Url" [value]="proxyPort" >
+      </div>
 
-    <button type="button" (click)="goBack();" class="btn btn-secondary btn-outline-secondary">Back</button>
-    <button type="button" (click)="saveIdpUrls();" [disabled]="!form.valid" [ngClass]="(!form.valid) ? 'disabled': ''">Save</button>
+      <div class="form-group" style="width: 100%; display: inline-block; height: 35px; padding-top: 10px;">
+        <span><input type="checkbox" (click)="showProxyAuthentication = !showProxyAuthentication" class="d-inline-block" style="height: 20px!important;"/> Use authentication?</span>
+      </div>
 
-  </form>
+      <div class="form-group" style="width: 49%; display: inline-block;" *ngIf="showProxyAuthentication">
+        <label>Username</label>
+        <input formControlName="proxyUsername" type="text" class="form-control" placeholder="Proxy Username" [value]="proxyUsername" >
+      </div>
+      <div class="form-group" style="width: 2%; display: inline-block;"></div>
+      <div class="form-group" style="width: 49%; display: inline-block;" *ngIf="showProxyAuthentication">
+        <label>Password</label>
+        <input formControlName="proxyPassword" type="password" class="form-control" placeholder="Proxy Password" [value]="proxyPassword" >
+      </div>
+
+      <button type="button" (click)="goBack();" class="pull-left disabled">Back</button>
+      <button type="button" (click)="saveIdpUrls();" [disabled]="!form.valid" [ngClass]="(!form.valid) ? 'pull-right disabled': 'pull-right'">Save</button>
+
+    </form>
+  </div>
 </div>
