--- a/src/app/session/session-card/session-card.component.html
+++ b/src/app/session/session-card/session-card.component.html
@@ -1,10 +1,16 @@
-<div class="session-card button-area  {{session.account.type === eAccountType.AZURE ? 'azr' : 'aws'}} {{session.active ? 'active' : ''}}" (click)="switchCredentials()">
-  <span class="information">
+<div class="session-card button-area  {{session.account.type === eAccountType.AZURE ? 'azr' : 'aws'}} {{session.active ? 'active' : ''}}" >
+  <span class="information" (click)="switchCredentials()">
     <b>{{session.account.accountName.length >= 23 ? session.account.accountName.substr(0, 20) + '...' : session.account.accountName}}</b> - {{ sessionDetailToShow }}
   </span>
-  <ng-container dropdown placement="right">
-    <a dropdownToggle class="drop-list-container" aria-controls="drop-list" (click)="openDropDown($event);"><i
-      class="fa fa-ellipsis-v"></i></a>
+  <span class="information-offset" (click)="switchCredentials()">
+    <i class="status-item fas fa-circle {{session.active ? 'active' : 'offline'}}" *ngIf="!session.loading"></i>
+    <i class="status-item far fa-spinner-third fa-spin" *ngIf="session.loading"></i>
+  </span>
+
+  <ng-container dropdown placement="right" [autoClose]="true">
+    <a dropdownToggle class="drop-list-container" aria-controls="drop-list" (click)="openDropDown($event);" >
+      <i class="fa fa-ellipsis-v"></i>
+    </a>
     <div id="drop-list" *dropdownMenu class="dropdown-menu drop-list dropdown-menu-right" role="menu" aria-labelledby="button-basic">
       <a (click)="ssmModalOpen(session, $event);" *ngIf="(session.account.type === eAccountType.AWS || session.account.type === eAccountType.AWS_PLAIN_USER) && session.active">SSM session</a>
       <a (click)="removeAccount(session, $event);">Remove account</a>
@@ -15,8 +21,6 @@
     </div>
   </ng-container>
 
-  <i class="status-item fas fa-circle {{session.active ? 'active' : 'offline'}}" *ngIf="!session.loading"></i>
-  <i class="status-item far fa-spinner-third fa-spin" *ngIf="session.loading"></i>
 </div>
 
 
