--- a/src/app/session/session-card/session-card.component.html
+++ b/src/app/session/session-card/session-card.component.html
@@ -8,7 +8,7 @@
   </span>
 
   <ng-container dropdown placement="right" [autoClose]="true">
-    <a dropdownToggle class="drop-list-container" aria-controls="drop-list" (click)="openDropDown($event);" >
+    <a dropdownToggle class="drop-list-container" aria-controls="drop-list">
       <i class="fa fa-ellipsis-v"></i>
     </a>
     <div id="drop-list" *dropdownMenu class="dropdown-menu drop-list dropdown-menu-right" role="menu" aria-labelledby="button-basic">
