--- a/src/app/session/session-card/session-card.component.scss
+++ b/src/app/session/session-card/session-card.component.scss
@@ -34,12 +34,12 @@
   margin: 0 0 15px;
   cursor: pointer;
 
-  span.information {
+  .information {
     padding: 10px;
     display: inline-block;
     width: 77%;
   }
-  span.information-offset {
+  .information-offset {
     padding: 10px;
     display: inline-block;
     width: 12%;
