fix edit account back button

--- a/src/app/managing/edit-account/edit-account.component.html
+++ b/src/app/managing/edit-account/edit-account.component.html
@@ -1,5 +1,5 @@
 <div class="container-fluid">
-  <form [formGroup]="form" class="form center-vertical text-left">
+  <form [formGroup]="form" class="edit-form form center-vertical text-left">
     <ng-container>
       <div class="form-group" style="width: 100%; display: inline-block;">
         <div class="correct-top" style="width: 100%;">
