reviewed MFA code integrating with edit plain account capabilities and bugfixes from master

--- a/src/app/session/session-card/session-card.component.scss
+++ b/src/app/session/session-card/session-card.component.scss
@@ -35,7 +35,7 @@
   cursor: pointer;
 
   .information {
-    padding: 10px;
+    padding: 10px 0 10px 10px;
     display: inline-block;
     width: 77%;
   }
