Added integration to AwsSSO, need credentials strategy

--- a/src/app/shared/profile-sidebar/profile-sidebar.component.html
+++ b/src/app/shared/profile-sidebar/profile-sidebar.component.html
@@ -2,5 +2,6 @@
   <span class="close-profile"><i class="fa fa-times"></i></span>
 
   <a class="menu-item" (click)="goToProfile();"><i class="fa fa-gear"></i>&nbsp;Options</a>
+  <a class="menu-item" (click)="goToIntegrations();"><i class="fa fa-gear"></i>&nbsp;Integrations</a>
   <a class="menu-item" (click)="logout();"><i class="fa fa-sign-out-alt"></i>&nbsp;IdP Logout</a>
 </div>
