fix account name

--- a/src/app/session/session-card/session-card.component.html
+++ b/src/app/session/session-card/session-card.component.html
@@ -1,6 +1,6 @@
 <div class="session-card button-area  {{session.account.type === eAccountType.AZURE ? 'azr' : 'aws'}} {{session.active ? 'active' : ''}}">
   <div class="information" (click)="switchCredentials()">
-    <b>{{session.account.accountName.length >= 35 ? session.account.accountName.substr(0, 35) + '...' : session.account.accountName}}</b> - {{ sessionDetailToShow }}
+    <b>{{session.account.accountName}}</b> - {{ sessionDetailToShow }}
   </div>
   <div class="information-offset" (click)="switchCredentials()">
     <i class="status-item fas fa-circle {{session.active ? 'active' : 'offline'}}" *ngIf="!session.loading"></i>
