--- a/src/app/shared/profile-sidebar/profile-sidebar.component.html
+++ b/src/app/shared/profile-sidebar/profile-sidebar.component.html
@@ -1,7 +1,21 @@
 <div class="profile {{profileOpen ? 'extended' : ''}}" (click)="closeProfile();">
-  <span class="close-profile"><i class="fa fa-times"></i></span>
 
-  <a class="menu-item" (click)="goToProfile();"><i class="fa fa-gear"></i>&nbsp;Options</a>
-  <a class="menu-item" (click)="goToIntegrations();"><i class="fa fa-gear"></i>&nbsp;Integrations</a>
-  <a class="menu-item" (click)="logout();"><i class="fa fa-sign-out-alt"></i>&nbsp;IdP Logout</a>
+  <img src="assets/images/Leapp_Logo_white.png" alt="" title="" width="110" />
+
+  <a class="menu-item" (click)="closeProfile();"><i class="fa fa-home"></i>&nbsp;<span>Home</span></a>
+  <a class="menu-item" (click)="goToProfile();"><i class="fa fa-gear"></i>&nbsp;<span>Options</span></a>
+  <a class="menu-item" (click)="goToIntegrations();">
+    <i class="fa fa-link"></i>&nbsp;<span>Integrations</span><br>
+    <small>Identity Provider</small>
+    <br>
+    <small>Other</small>
+  </a>
+  <br>
+  <br>
+  <br>
+  <a class="menu-item" (click)="logout();"><i class="fa fa-sign-out-alt"></i>&nbsp;<span>IdP Logout</span></a>
+
+  <div class="copy">
+    <span>Leapp | powered by beSharp</span>
+  </div>
 </div>
