--- a/src/app/shared/profile-sidebar/profile-sidebar.component.scss
+++ b/src/app/shared/profile-sidebar/profile-sidebar.component.scss
@@ -1,21 +1,69 @@
 @import "palette";
 
 .profile {
-  position: absolute;
-  left: 0;
-  width: 0;
+  position: fixed;
+  left: -200px;
+  width: 200px;
   top: 0;
   bottom: 0;
   z-index: 2;
-  transition: width 0.3s ease;
-  box-shadow: 0 0 42px -14px rgba(0, 0, 0, 0.49);
-  background: white;
+  transition: left 0.3s ease;
+  background: #203E3A;
   overflow: hidden;
-  padding-top: 110px;
+  padding: 30px 20px 20px 20px;
+
+  img {
+    margin-bottom: 50px;
+    margin-left: 20px;
+  }
+
+  a {
+    position: relative;
+    display: block;
+    color: #909f9d;
+    transition: all 0.3s ease;
+    padding: 10px 40px;
+    margin: 0 -20px;
+    text-decoration: none;
+
+    i { color: #909f9d; margin-right: 10px; }
+
+    small {
+      display: inline-block;
+      margin-left: 30px;
+      font-size: 12px;
+    }
+  }
+  a:hover, a:visited {
+    color: white;
+
+    i { color: #73E0CF; margin-right: 10px; }
+  }
+  a:hover::before, a:visited::before {
+    content: '';
+    position: absolute;
+    left: 0;
+    top: 0;
+    bottom: 0;
+    width: 4px;
+    border-top-right-radius: 4px;
+    border-bottom-right-radius: 4px;
+    background-color: #73E0CF;
+  }
+
+  .copy {
+    position: absolute;
+    bottom: 10px;
+    border-top: 1px solid white;
+    color: white;
+    font-size: 12px;
+    padding-top: 10px;
+  }
+
 }
 
 .extended {
-  width: 280px;
+  left: 0;
 
   .menu-item {
     opacity: 1;
