--- a/src/assets/scss/global.scss
+++ b/src/assets/scss/global.scss
@@ -134,6 +134,8 @@ body.modal-open .background {
 
 body.moved .container-fluid { left: 200px; }
 body.moved .header-content { left: 227px; }
+body .mask { display: none; }
+body.moved .mask { display: block; opacity: 0; position: fixed; z-index: 1000; left: 200px; top: 90px; right: 0; bottom: 0; }
 
 .modal-dialog.ssm-modal {
   margin: 0!important;
