--- a/src/app/shared/profile-page/profile-page.component.scss
+++ b/src/app/shared/profile-page/profile-page.component.scss
@@ -24,6 +24,12 @@ body {
   font-family: "AvenirNext", "Open Sans", sans-serif;
   padding: 0 25px;
 
+  position: fixed;
+  left: 0;
+  transition: left 0.3s ease;
+  top: 80px;
+  bottom: 0;
+
   .pull-right {
     position: absolute;
     right: 25px;
