added validators in form

--- a/src/app/shared/integrations-page/integrations-page.component.html
+++ b/src/app/shared/integrations-page/integrations-page.component.html
@@ -7,8 +7,7 @@
     <div class="callout" (click)="showProviders()">
       <h2><i class="fa fa-fingerprint"></i> Identity Providers</h2>
       <span>
-        Go take a coffe and we will fill sessions from your AWS SSO
-        profile, we are checking all the possible roles you can access to.
+      Lorem ipsum text to change!
       </span>
     </div>
 
