--- a/src/app/integrations/components/aws-sso/aws-sso.component.html
+++ b/src/app/integrations/components/aws-sso/aws-sso.component.html
@@ -8,7 +8,7 @@
       <div class="form-group" style="width: 100%; display: inline-block;">
         <label><strong>Identity Provider</strong></label>
         <br>
-        <input type="text" class="form-control blue-control" placeholder="AWS Single Sign On" value="AWS Single Sign On" readonly>
+        <input  type="text" class="form-control blue-control btn-control" placeholder="AWS Single Sign On" value="AWS Single Sign On" readonly>
       </div>
 
       <ng-container *ngIf="!isAwsSsoActive">
