--- a/src/app/shared/integrations-page/integrations-page.component.html
+++ b/src/app/shared/integrations-page/integrations-page.component.html
@@ -7,7 +7,7 @@
     <div class="callout" (click)="showProviders()">
       <h2><i class="fa fa-fingerprint"></i> Identity Providers</h2>
       <span>
-      Lorem ipsum text to change!
+      Integrate an Identity Provider that will act as your sessions handler and credential broker.
       </span>
     </div>
 
@@ -21,7 +21,7 @@
       <div class="form-group" style="width: 100%; display: inline-block;">
         <label><strong>Identity Providers</strong></label>
         <br>
-        <span class="form-control blue-control" (click)="goToAwsSSO()">AWS Single Sign On</span>
+        <span class="form-control blue-control btn-control" (click)="goToAwsSSO()">AWS Single Sign On</span>
       </div>
 
     </ng-container>
