--- a/src/app/shared/integrations-page/integrations-page.component.html
+++ b/src/app/shared/integrations-page/integrations-page.component.html
@@ -7,7 +7,7 @@
     <div class="callout" (click)="showProviders()">
       <h2><i class="fa fa-fingerprint"></i> Identity Providers</h2>
       <span>
-      Integrate an Identity Provider that will act as your sessions handler and credential broker.
+      Integrate an Identity Provider that will handle your Leapp Sessions and act as a credential broker.
       </span>
     </div>
 
