Removed comments and re-formatted code

--- a/src/app/shared/profile-page/profile-page.component.html
+++ b/src/app/shared/profile-page/profile-page.component.html
@@ -29,7 +29,7 @@
       <div class="form-group" style="width: 6%; display: inline-block; padding-top: 35px; padding-left: 3px;">:</div>
       <div class="form-group" style="width: 16%; display: inline-block;">
         <label>Proxy Port</label>
-        <input formControlName="proxyPort" type="text" class="form-control" placeholder="Proxy Url" [value]="proxyPort" >
+        <input formControlName="proxyPort" type="text" class="form-control" placeholder="Proxy Port" [value]="proxyPort" >
       </div>
 
       <div class="form-group" style="width: 100%; display: inline-block; height: 35px; padding-top: 10px;">
