--- a/src/assets/scss/global.scss
+++ b/src/assets/scss/global.scss
@@ -15,6 +15,17 @@ h1, h2, h3, h4, h5, h6 {
   font-family: 'Open Sans', sans-serif;
 }
 
+.dragger {
+  position: fixed;
+  top: 0;
+  left:  0;
+  right:  0;
+  height: 20px;
+  background: #f8f8f8;
+  -webkit-user-select: none;
+  -webkit-app-region: drag;
+}
+
 .flex-container {display: flex; justify-content: center; flex-wrap: wrap; align-content: center; align-items: center}
 .between {justify-content: space-between}
 .column {flex-direction: column}
