--- a/src/app/session/session-card/session-card.component.scss
+++ b/src/app/session/session-card/session-card.component.scss
@@ -1,5 +1,28 @@
 @import "palette";
 
+.region-label {
+  position: absolute;
+  top: -15px;
+  color: white;
+  font-size: 10px!important;
+  left: -$border-radius;
+  text-transform: uppercase;
+  font-family: "AvenirNextDemiBold", sans-serif !important;
+  border-radius: $border-radius $border-radius 0 0;
+}
+
+.region-label.aws {
+  border-left: $border-radius solid $aws;
+  border-right: $border-radius solid $aws;
+  background: $aws;
+}
+
+.region-label.azr {
+  border-left: $border-radius solid $azr;
+  border-right: $border-radius solid $azr;
+  background: $azr;
+}
+
 .ssm-card {
   border-radius: 4px;
   background: white;
@@ -34,8 +57,8 @@ b {
   position: relative;
   transition: all 0.4s ease;
   color: $text-color;
-  border-radius: $border-radius;
-  margin: 0 0 15px;
+  border-radius: 0 $border-radius $border-radius $border-radius;
+  margin: 0 0 20px;
   cursor: pointer;
   font-size: 13px;
 
@@ -120,7 +143,7 @@ b {
 }
 
 .session-card.aws {
-    border-left: 5px solid $aws;
+  border-left: 5px solid $aws;
 }
 .session-card.azr {
   border-left: 5px solid $azr;
