--- a/src/app/session/session/session.component.html
+++ b/src/app/session/session/session.component.html
@@ -30,7 +30,7 @@
   <ul class="account-cards">
     <li style="position:relative;"> <span class="fixed-status">Status</span></li>
     <li *ngIf="activeSessions.length !== 0">
-      <h3>Active Accounts</h3>
+      <h3 class="mb-session">Active Accounts</h3>
     </li>
 
     <ng-container *ngFor="let session of activeSessions">
@@ -40,7 +40,7 @@
     </ng-container>
 
     <li>
-      <h3>All other Accounts</h3>
+      <h3 class="mb-session">All other Accounts</h3>
     </li>
 
     <ng-container *ngFor="let session of notActiveSessions">
