added default region and default location to option panel added patch for previous sessions. added region to aws sso sessions.

--- a/src/app/managing/create-account/create-account.component.html
+++ b/src/app/managing/create-account/create-account.component.html
@@ -21,8 +21,7 @@
         <label>My integration is:</label>
         <br>
         <div class="correct-top">
-          <button type="button" class="providers" (click)="goToAwsSso()">AWS SSO</button>
-
+          <button type="button" class="providers" (click)="goToAwsSso()"><img src="assets/images/aws-sso-logo.png" height="20"></button>
         </div>
       </div>
     </ng-container>
